# permanent-boost

./: .gitignore  CMakeLists.txt  README.md  conftest.py  example_data.npy  figures.ipynb  foo.py  main.tex  permanent.py  pyproject.toml  requirements.txt
.github/workflows/: build.yml  ci.yml  pip.yml  tests.yml
app/: generate.py  main.py  matrix.npy
benchmarks/: test_benchmark_grad_perm.py  test_benchmark_perm.py  utils.py
src/: gpu_ops.cc  kernels.cc.cu  kernels.h  main.cpp  matrix.hpp  n_aryGrayCodeCounter.hpp  numpy_utils.hpp  permanent.hpp  utils.hpp
src/scikit_build_example/: __init__.py
src/sooki/: __init__.py  permanent.py
tests/: assym.py  test_basic.py  test_benchmark.py  test_grad_perm.py  test_permanent.py
